# eu-stat-competion

./: README.md  crawler.py  data_exporter.py  docker-compose.yaml  fin_data_extractor.py  fin_rep_finder.py  gcs_utils.py  genai_utils.py  llm_conversation_store.py  main.py  models.py  nace_classifier.py  pdf_downloader.py  pyproject.toml  report_downloader.py  report_uploader.py  site_finder.py  stockanalysis_scraper.py  utils.py  valkey.conf  valkey_stores.py  valkey_utils.py
data/nace/: nace2lvl1.json  nace2lvl2.json
